--- a/index.html
+++ b/index.html
@@ -1,35 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Portfolio | Senior Data Analyst & Engineer</title>
+    <title>Strategic Data Portfolio | Analytics & Engineering</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <header>
-        <h1>Data Analytics Portfolio</h1>
-        <p>Expertise in building scalable ETL pipelines, strategic business intelligence, and high-fidelity customer behavioral modeling.</p>
+        <h1>Strategic Data Analytics</h1>
+        <p>Advanced ETL engineering, predictive demand intelligence, and behavioral mapping.</p>
     </header>
 
     <div class="container">
         <h2 class="section-title">Strategic Projects</h2>
-        
+
         <div class="project-grid">
+            <!-- Project 8: Predictive Analytics -->
+            <div class="card highlight">
+                <div class="tags">
+                    <span class="tag">Machine Learning</span>
+                    <span class="tag">Forecasting</span>
+                    <span class="tag">Risk</span>
+                </div>
+                <h3>Demand Intelligence & Risk</h3>
+                <p>Advanced time-series forecasting and customer churn prediction using behavioral signals and automated
+                    risk scoring.</p>
+                <a href="08_predictive_analytics/outputs/demand_intelligence_dashboard.html"
+                    class="btn btn-primary">View Dashboard</a>
+            </div>
+
             <!-- Project 7: Customer Analysis -->
             <div class="card">
                 <div class="tags">
-                    <span class="tag">Data Science</span>
+                    <span class="tag">Analytics</span>
                     <span class="tag">Python</span>
                     <span class="tag">RFM</span>
                 </div>
-                <h3>Advanced Customer Analysis</h3>
-                <p>Senior-level behavioral segmentation using RFM and Cohort Analysis to identify high-value "Champions" and mitigate churn risks.</p>
-                <a href="07_customer_analysis/outputs/customer_insights_dashboard.html" class="btn btn-primary">View Dashboard</a>
+                <h3>Strategic Customer Analysis</h3>
+                <p>Behavioral segmentation using RFM and Cohort Analysis to identify high-value "Champions" and
+                    retention opportunities.</p>
+                <a href="07_customer_analysis/outputs/customer_insights_dashboard.html" class="btn btn-primary">View
+                    Dashboard</a>
             </div>
 
             <!-- Project 4: Financial Analysis -->
@@ -40,8 +58,10 @@
                     <span class="tag">Excel</span>
                 </div>
                 <h3>Retail Financial Intelligence</h3>
-                <p>Consolidated P&L statements and retail health ratios (GMROI, Turnover) integrated with inventory and sales data.</p>
-                <a href="04_financial_analysis/outputs/retail_finance_dashboard.html" class="btn btn-primary">View Dashboard</a>
+                <p>Consolidated P&L statements and retail health ratios (GMROI, Turnover) integrated with inventory and
+                    sales data.</p>
+                <a href="04_financial_analysis/outputs/retail_finance_dashboard.html" class="btn btn-primary">View
+                    Dashboard</a>
                 <a href="powerbi_exports/retail_financial_report.xlsx" class="btn btn-outline">Download Excel Report</a>
             </div>
 
@@ -53,8 +73,10 @@
                     <span class="tag">ABC</span>
                 </div>
                 <h3>Inventory Optimization</h3>
-                <p>Predictive stockout analysis and ABC classification to optimize holding costs and ensure high fill rates.</p>
-                <a href="06_inventory_analysis/outputs/inventory_analysis_dashboard.html" class="btn btn-primary">View Dashboard</a>
+                <p>Predictive stockout analysis and ABC classification to optimize holding costs and ensure high fill
+                    rates.</p>
+                <a href="06_inventory_analysis/outputs/inventory_analysis_dashboard.html" class="btn btn-primary">View
+                    Dashboard</a>
             </div>
 
             <!-- Project 1: Sales Analytics -->
@@ -65,15 +87,64 @@
                     <span class="tag">Storytelling</span>
                 </div>
                 <h3>Sales Strategic Dashboard</h3>
-                <p>Interactive sales metrics visualization focusing on Revenue, CLV, and growth momentum with strategic recommendations.</p>
-                <a href="01_sales_analytics/outputs/sales_storytelling_dashboard.html" class="btn btn-primary">View Dashboard</a>
+                <p>Interactive sales metrics visualization focusing on Revenue, CLV, and growth momentum with strategic
+                    recommendations.</p>
+                <a href="01_sales_analytics/outputs/sales_storytelling_dashboard.html" class="btn btn-primary">View
+                    Dashboard</a>
+            </div>
+        </div>
+
+        <h2 class="section-title">Engineering & Core Analytics</h2>
+        <p style="text-align: center; color: #AAA; margin-bottom: 40px; margin-top: -30px;">Scalable data architecture
+            and
+            quality frameworks.</p>
+
+        <div class="project-grid">
+            <!-- Project 2: ETL Pipeline -->
+            <div class="card">
+                <div class="tags">
+                    <span class="tag">Engineering</span>
+                    <span class="tag">PySpark</span>
+                    <span class="tag">Architecture</span>
+                </div>
+                <h3>Production ETL Pipeline</h3>
+                <p>Robust Bronze-Silver-Gold architecture with automated schema evolution and incremental loading
+                    patterns.</p>
+                <a href="https://github.com/Mfawzycode/Portfolio/tree/main/02_etl_pipeline" class="btn btn-outline"
+                    target="_blank">View Repository</a>
+            </div>
+
+            <!-- Project 3: Data Quality -->
+            <div class="card">
+                <div class="tags">
+                    <span class="tag">Validation</span>
+                    <span class="tag">Framework</span>
+                </div>
+                <h3>Data Quality Framework</h3>
+                <p>Automated quality scoring system ensure data integrity across the entire warehouse lifecycle.</p>
+                <a href="https://github.com/Mfawzycode/Portfolio/tree/main/03_data_quality" class="btn btn-outline"
+                    target="_blank">View Repository</a>
+            </div>
+
+            <!-- Project 5: Healthcare Analytics -->
+            <div class="card">
+                <div class="tags">
+                    <span class="tag">Healthcare</span>
+                    <span class="tag">KPIs</span>
+                </div>
+                <h3>Patient Care Analytics</h3>
+                <p>Optimizing clinical operations by analyzing patient wait times and treatment efficiency metrics.</p>
+                <a href="https://github.com/Mfawzycode/Portfolio/tree/main/05_healthcare_analysis"
+                    class="btn btn-outline" target="_blank">View Repository</a>
             </div>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2025 M. Fawzy | <a href="https://github.com/Mfawzycode" style="color: var(--primary); text-decoration: none;">GitHub @Mfawzycode</a></p>
+        <p>&copy; 2025 M. Fawzy | <a href="https://github.com/Mfawzycode"
+                style="color: var(--primary); text-decoration: none;">GitHub @Mfawzycode</a></p>
     </footer>
 
 </body>
+
 </html>
