Launch: Advanced Healthcare Clinical Intelligence & Predictive Analytics integration

--- a/index.html
+++ b/index.html
@@ -129,13 +129,15 @@
             <!-- Project 5: Healthcare Analytics -->
             <div class="card">
                 <div class="tags">
-                    <span class="tag">Healthcare</span>
+                    <span class="tag">Clinical</span>
                     <span class="tag">KPIs</span>
+                    <span class="tag">Efficiency</span>
                 </div>
-                <h3>Patient Care Analytics</h3>
-                <p>Optimizing clinical operations by analyzing patient wait times and treatment efficiency metrics.</p>
-                <a href="https://github.com/Mfawzycode/Portfolio/tree/main/05_healthcare_analysis"
-                    class="btn btn-outline" target="_blank">View Repository</a>
+                <h3>Clinical Intelligence Dash</h3>
+                <p>Advanced clinical analytics focusing on 30-day readmissions, treatment outcomes, and operational
+                    efficiency mapping.</p>
+                <a href="05_healthcare_analysis/outputs/clinical_intelligence_dashboard.html" class="btn btn-primary"
+                    target="_blank">View Dashboard</a>
             </div>
         </div>
     </div>
