--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
         <h2 class="section-title">Strategic Projects</h2>
 
         <div class="project-grid">
+            <!-- Project 9: AI RAG System -->
+            <div class="card highlight"
+                style="border-color: var(--accent); background: linear-gradient(135deg, rgba(142, 68, 173, 0.1), rgba(255, 255, 255, 0.05));">
+                <div class="tags">
+                    <span class="tag" style="background: rgba(142, 68, 173, 0.2); color: var(--accent);">AI</span>
+                    <span class="tag">RAG</span>
+                    <span class="tag">NLP</span>
+                </div>
+                <h3>AI "Chat with Data"</h3>
+                <p>Retrieval-Augmented Generation system enabling natural language queries against corporate CSV and SQL
+                    data warehouses.</p>
+                <a href="09_ai_rag_system/app/index.html" class="btn btn-primary"
+                    style="background: var(--primary);">Interact with AI</a>
+            </div>
+
             <!-- Project 8: Predictive Analytics -->
             <div class="card highlight">
                 <div class="tags">
@@ -34,6 +49,20 @@
                     risk scoring.</p>
                 <a href="08_predictive_analytics/outputs/demand_intelligence_dashboard.html"
                     class="btn btn-primary">View Dashboard</a>
+            </div>
+
+            <!-- Project 5: Healthcare Analytics -->
+            <div class="card">
+                <div class="tags">
+                    <span class="tag">Clinical</span>
+                    <span class="tag">KPIs</span>
+                    <span class="tag">Efficiency</span>
+                </div>
+                <h3>Clinical Intelligence Dash</h3>
+                <p>Advanced clinical analytics focusing on 30-day readmissions, treatment outcomes, and operational
+                    efficiency mapping.</p>
+                <a href="05_healthcare_analysis/outputs/clinical_intelligence_dashboard.html" class="btn btn-primary"
+                    target="_blank">View Dashboard</a>
             </div>
 
             <!-- Project 7: Customer Analysis -->
@@ -126,19 +155,6 @@
                     target="_blank">View Repository</a>
             </div>
 
-            <!-- Project 5: Healthcare Analytics -->
-            <div class="card">
-                <div class="tags">
-                    <span class="tag">Clinical</span>
-                    <span class="tag">KPIs</span>
-                    <span class="tag">Efficiency</span>
-                </div>
-                <h3>Clinical Intelligence Dash</h3>
-                <p>Advanced clinical analytics focusing on 30-day readmissions, treatment outcomes, and operational
-                    efficiency mapping.</p>
-                <a href="05_healthcare_analysis/outputs/clinical_intelligence_dashboard.html" class="btn btn-primary"
-                    target="_blank">View Dashboard</a>
-            </div>
         </div>
     </div>
 
