Portfolio Transformation Complete

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strategic Data Intelligence | Principal Portfolio</title>
+    <title>Mohamed Fawzy | Head of Data Strategy & Analytics</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
@@ -14,9 +14,11 @@
     <nav>
         <div class="nav-container">
             <div class="nav-logo">M. FAWZY // STRATEGIC DATA</div>
-            <div style="display: flex; gap: 20px;">
+            <div style="display: flex; gap: 20px; align-items: center;">
+                <a href="#about" class="btn btn-outline" style="border: none; padding: 5px;">PROFILE</a>
                 <a href="#strategic" class="btn btn-outline" style="border: none; padding: 5px;">STRATEGIC</a>
-                <a href="#engineering" class="btn btn-outline" style="border: none; padding: 5px;">ENGINEERING</a>
+                <a href="#vision" class="btn btn-outline" style="border: none; padding: 5px;">VISION</a>
+                <a href="cv.html" class="btn btn-primary" style="padding: 8px 16px;">VIEW CV</a>
             </div>
         </div>
     </nav>
@@ -24,31 +26,57 @@
     <!-- Cinematic Hero -->
     <section class="hero">
         <div style="z-index: 1;">
-            <div class="tag" style="margin-bottom: 20px; border-color: var(--accent);">Architecting Intelligence</div>
-            <h1>The Future of <br>Data Engineering.</h1>
-            <p>High-fidelity ETL pipelines, predictive demand modeling, and AI-driven RAG systems for enterprise-grade
-                decision intelligence.</p>
+            <div class="tag" style="margin-bottom: 20px; border-color: var(--accent);">Strategic Data Leadership</div>
+            <h1 style="font-size: 5rem; margin-bottom: 0px;">Mohamed Fawzy</h1>
+            <p
+                style="font-size: 1.5rem; color: var(--accent); font-weight: 400; margin-top: 0; letter-spacing: 4px; text-transform: uppercase;">
+                Engineering Intelligence</p>
+            <p style="max-width: 800px; margin: 20px auto;">Architecting data ecosystems that drive <b>20% carrying cost
+                    reductions</b> and <b>AI-powered business transformation</b>. Specializing in high-fidelity
+                pipelines and enterprise-grade decision intelligence.</p>
             <div style="margin-top: 40px; display: flex; gap: 20px; justify-content: center;">
-                <a href="#strategic" class="btn btn-primary">EXPLORE INTELLIGENCE</a>
-                <a href="https://github.com/Mfawzycode" class="btn btn-outline">GITHUB OS</a>
+                <a href="#strategic" class="btn btn-primary">EXPLORE STRATEGY</a>
+                <a href="cv.html" class="btn btn-outline">VIEW FULL CV</a>
             </div>
         </div>
     </section>
 
+    <!-- Professional Profile Section -->
+    <div class="container" id="about" style="padding-top: 80px;">
+        <div class="card reveal" style="padding: 50px; text-align: center; border: 1px solid rgba(255,255,255,0.05);">
+            <div class="tag" style="margin-bottom: 20px;">Executive Profile</div>
+            <h2 style="font-size: 2.5rem; margin-bottom: 20px;">Architecting the Future of Data Engineering</h2>
+            <p style="font-size: 1.15rem; color: var(--text-dim); line-height: 1.8; max-width: 900px; margin: 0 auto;">
+                A highly accomplished and strategic Data and Analytics professional with over **15 years of experience**
+                in data strategy, intelligence analysis, and leadership. I have a proven track record of developing and
+                executing comprehensive data and AI strategies that drive business transformation, enhance operational
+                efficiency, and generate new growth opportunities.
+            </p>
+            <div
+                style="margin-top: 30px; display: flex; justify-content: center; gap: 30px; color: var(--accent); font-weight: 600;">
+                <span>15+ Years Mastery</span>
+                <span>•</span>
+                <span>SARA Group Consultant</span>
+                <span>•</span>
+                <span>AI Innovation Leader</span>
+            </div>
+        </div>
+    </div>
+
     <div class="container" id="strategic">
-        <h2 class="section-title">Strategic Intelligence</h2>
+        <h2 class="section-title">Strategic Impact</h2>
 
         <div class="project-grid">
             <!-- Project 9: AI RAG System -->
             <div class="card highlight reveal">
                 <div class="tags">
-                    <span class="tag">Next-Gen AI</span>
-                    <span class="tag">RAG</span>
-                    <span class="tag">NLP</span>
+                    <span class="tag">OpenAI</span>
+                    <span class="tag">Langchain</span>
+                    <span class="tag">SARA Group</span>
                 </div>
-                <h3>AI "Chat with Data"</h3>
-                <p>Advanced Retrieval-Augmented Generation (RAG) system for natural language queries against data
-                    warehouses.</p>
+                <h3>AI Database Chatbot</h3>
+                <p>Enterprise-grade RAG system developed for SARA Group, enabling business users to query complex data
+                    warehouses using natural language.</p>
                 <div style="display: flex; gap: 10px;">
                     <a href="09_ai_rag_system/app/index.html" class="btn btn-primary">LAUNCH AI</a>
                     <a href="09_ai_rag_system/README.md" class="btn btn-outline">DOCS</a>
@@ -58,80 +86,73 @@
             <!-- Project 8: Predictive Analytics -->
             <div class="card highlight reveal">
                 <div class="tags">
-                    <span class="tag">Predictive</span>
                     <span class="tag">ML</span>
-                    <span class="tag">Risk</span>
+                    <span class="tag">Inventory</span>
+                    <span class="tag">20% Savings</span>
                 </div>
-                <h3>Demand Intelligence & Risk</h3>
-                <p>Enterprise-grade time-series forecasting and behavioral churn modeling with automated risk scoring.
-                </p>
+                <h3>Predictive Inventory Intel</h3>
+                <p>Demand forecasting models that delivered a <b>20% reduction in carrying costs</b> and eliminated
+                    stockouts through advanced segmentation.</p>
                 <a href="08_predictive_analytics/outputs/demand_intelligence_dashboard.html"
                     class="btn btn-primary">VIEW DASHBOARD</a>
             </div>
 
-            <!-- Project 5: Healthcare Analytics -->
+            <!-- Project 5: Operational Excellence -->
             <div class="card reveal">
                 <div class="tags">
-                    <span class="tag">Clinical</span>
-                    <span class="tag">KPIs</span>
+                    <span class="tag">Real Estate</span>
+                    <span class="tag">Operations</span>
+                    <span class="tag">KPTC</span>
                 </div>
-                <h3>Clinical Intelligence Dash</h3>
-                <p>30-day readmission modeling and treatment outcome analytics for healthcare operational efficiency.
-                </p>
-                <a href="05_healthcare_analysis/outputs/clinical_intelligence_dashboard.html" class="btn btn-primary"
-                    target="_blank">VIEW DASHBOARD</a>
+                <h3>Operational Intelligence</h3>
+                <p>Performance tuning and security optimization for high-availability database clusters, ensuring 99.9%
+                    data availability for transport and logistics.</p>
+                <a href="https://github.com/Mfawzycode/Portfolio" class="btn btn-outline">EXPLORE OPS</a>
             </div>
 
             <!-- Project 7: Customer Analysis -->
             <div class="card reveal">
                 <div class="tags">
-                    <span class="tag">Behavioral</span>
                     <span class="tag">RFM</span>
+                    <span class="tag">Churn</span>
+                    <span class="tag">SARA Group</span>
                 </div>
-                <h3>Strategic Customer Insights</h3>
-                <p>RFM segmentation and cohort modeling to map long-term customer value and retention lifecycles.</p>
+                <h3>Strategic Customer Growth</h3>
+                <p>Implementation of RFM, Churn, and Lifetime Value models to optimize sales strategies and loyalty
+                    engagement.</p>
                 <a href="07_customer_analysis/outputs/customer_insights_dashboard.html" class="btn btn-primary">VIEW
                     DASHBOARD</a>
             </div>
 
-            <!-- Project 4: Financial Analysis -->
+            <!-- Project 4: Financial Intelligence -->
             <div class="card reveal">
                 <div class="tags">
-                    <span class="tag">Finance</span>
                     <span class="tag">Retail</span>
+                    <span class="tag">D365</span>
+                    <span class="tag">FP&A</span>
                 </div>
-                <h3>Retail Financial Intel</h3>
-                <p>Integrated P&L and retail health ratios (GMROI, Turnover) synced with multi-stream sales data.</p>
+                <h3>Retail Financial Intelligence</h3>
+                <p>Integrated P&L and retail health ratios (GMROI, Turnover) synced with D365 and NetSuite for strategic
+                    decision support.</p>
                 <a href="04_financial_analysis/outputs/retail_finance_dashboard.html" class="btn btn-primary">VIEW
                     DASHBOARD</a>
             </div>
 
-            <!-- Project 6: Inventory Analysis -->
-            <div class="card reveal">
-                <div class="tags">
-                    <span class="tag">Supply Chain</span>
-                    <span class="tag">ABC</span>
-                </div>
-                <h3>Inventory Optimization</h3>
-                <p>Predictive stockout analysis and ABC classification to minimize capital lock-in and maximize fill
-                    rates.</p>
-                <a href="06_inventory_analysis/outputs/inventory_analysis_dashboard.html" class="btn btn-primary">VIEW
-                    DASHBOARD</a>
-            </div>
         </div>
 
         <div id="engineering" style="padding-top: 100px;">
-            <h2 class="section-title">Data Architecture</h2>
+            <h2 class="section-title">Engineering Excellence</h2>
             <div class="project-grid">
                 <!-- Project 2: ETL Pipeline -->
                 <div class="card reveal">
                     <div class="tags">
-                        <span class="tag">Engineering</span>
-                        <span class="tag">PySpark</span>
+                        <span class="tag">Boomi iPaaS</span>
+                        <span class="tag">ERP Sync</span>
+                        <span class="tag">Azure</span>
                     </div>
-                    <h3>Enterprise ETL Pipeline</h3>
-                    <p>Production-grade Bronze-Silver-Gold architecture with automated schema evolution and state
-                        management.</p>
+                    <h3>Enterprise ETL & Integration</h3>
+                    <p>Orchestrating high-fidelity integrations between CRM, HR, and e-commerce with D365 and Oracle
+                        NetSuite ecosystems.</p>
                     <a href="https://github.com/Mfawzycode/Portfolio/tree/main/02_etl_pipeline" class="btn btn-outline"
                         target="_blank">EXPLORE ARCH</a>
                 </div>
@@ -139,14 +160,39 @@
                 <!-- Project 3: Data Quality -->
                 <div class="card reveal">
                     <div class="tags">
-                        <span class="tag">DQM</span>
-                        <span class="tag">Framework</span>
+                        <span class="tag">Governance</span>
+                        <span class="tag">Ethics</span>
                     </div>
-                    <h3>Data Quality Ecosystem</h3>
-                    <p>Automated validation scores and quality gates ensuring integrity across the massive data
-                        warehouse.</p>
+                    <h3>Governance & Ethics Framework</h3>
+                    <p>Establishing robust quality gates and ethical AI policies to ensure enterprise-wide integrity and
+                        security.</p>
                     <a href="https://github.com/Mfawzycode/Portfolio/tree/main/03_data_quality" class="btn btn-outline"
                         target="_blank">VIEW FRAMEWORK</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- New: Strategic Roadmap Section -->
+        <div id="vision" style="padding-top: 100px; margin-bottom: 60px;">
+            <h2 class="section-title">Strategic Roadmap</h2>
+            <p style="text-align: center; color: var(--text-dim); max-width: 700px; margin: 0 auto 50px;">Proposed
+                vision for enterprise-wide data transformation and AI-driven growth.</p>
+
+            <div class="project-grid">
+                <div class="card reveal" style="border-left: 4px solid var(--primary);">
+                    <h4 style="color: #FFF; margin-bottom: 15px;">1. AI-Powered Personalization</h4>
+                    <p style="font-size: 0.9rem; color: var(--text-dim);">Leveraging ML models for real-time customer
+                        behavior analysis and automated personalization across retail touchpoints.</p>
+                </div>
+                <div class="card reveal" style="border-left: 4px solid var(--secondary);">
+                    <h4 style="color: #FFF; margin-bottom: 15px;">2. Predictive Supply Chain</h4>
+                    <p style="font-size: 0.9rem; color: var(--text-dim);">Using ML-driven demand forecasting to reduce
+                        operational costs and prevent stockouts through real-time visibility.</p>
+                </div>
+                <div class="card reveal" style="border-left: 4px solid var(--accent);">
+                    <h4 style="color: #FFF; margin-bottom: 15px;">3. Governance Ecosystem</h4>
+                    <p style="font-size: 0.9rem; color: var(--text-dim);">Establishing a comprehensive framework for
+                        data quality, security, and ethical AI deployment at scale.</p>
                 </div>
             </div>
         </div>
